# tidal-playlist-builder

./: .gitignore  LICENSE  README.md  TIMECONFIG.json
anthologies/david-bowie/: INTRODUCTION-LESTER-BANGS.md  INTRODUCTION.md  manifest.json  order.json  supplements.json  vol01_bewildered_boy.txt  vol02_man_who_sold.txt  vol03_ziggy_stardust.txt  vol04_diamond_duke.txt  vol05_berlin_trilogy.txt  vol06_pop_star.txt  vol07_wilderness.txt  vol08_art_chameleon.txt  vol09_the_sage.txt  vol10_final_act.txt
anthologies/iron-maiden/: anthology.md  manifest.json  vol01_iron_dawn.txt  vol02_ascension.txt  vol03_somewhere_in_time.txt  vol04_the_darkening.txt  vol05_renaissance.txt  vol06_endless_frontier.txt  vol07_live_appendix.txt
anthologies/new-model-army/: INTRODUCTION-NICK-KENT.md  manifest.json  vol01_bradford_fire.txt  vol02_state_of_the_nation.txt  vol03_thunder.txt  vol04_wilderness.txt  vol05_ghosts_and_carnivals.txt  vol06_late_burning.txt  vol07_live_appendix.txt
anthologies/ryuichi-sakamoto/: anthology.md  manifest.json  missed_tracks.txt  vol01_electric_youth.txt  vol02_the_world_in_a_wire.txt  vol03_bibo_no_aozora.txt  vol04_thousand_screens.txt  vol05_noise_and_silence.txt  vol06_ars_longa.txt  vol07_collaborations.txt
code/: Cargo.toml
code/src/: cli.rs  error.rs  keychain.rs  main.rs  model.rs
code/src/source/: mod.rs
code/src/tidal/: auth.rs
docs/: v0.1.0-code-review-and-test-report.md
scripts/: add_tracks.py  build_anthology.py  reorder_playlists.py  tidal_common.py
